Fixed the Team page

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -1,3 +1,6 @@
+
+<div class="team" isotope>
+
 <div id="topinfo" class="area orange">
     <div class="grid">
 
@@ -59,7 +62,7 @@
             <div class="col20">
 
             <ul class="dotList" id="contactList">
-                <li class="Program CFP">
+                <li class="Program CFP Devices Social">
                     <div class="icon" style="background: url('../../images/team/JoVoordeckers.jpg') no-repeat center;"></div>
                     <h4>Jo Voordeckers</h4>
 
@@ -178,7 +181,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="Program">
+                <li class="Program Devices">
                     <div class="icon" style="background: url('../../images/team/JohanVos.jpg') no-repeat center;"></div>
                     <h4>Johan Vos</h4>
 
@@ -433,7 +436,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="media">
+                <li class="Media">
                     <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
                     <h4>Roy Van Rijn</h4>
 
@@ -450,7 +453,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="program">
+                <li class="Program">
                     <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
                     <h4>Steven Noels</h4>
 
@@ -467,7 +470,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="program">
+                <li class="Program">
                     <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
                     <h4>Geert Van Landeghem</h4>
 
@@ -489,4 +492,7 @@
             </div>
         </div>
     </div>
+</div>
+
+
 </div>
