- Added new image for Tasha & Alexis - Added team info

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -1,4 +1,3 @@
-
 <div class="team" isotope>
 
 <div id="topinfo" class="area orange">
@@ -120,10 +119,9 @@
                     <div class="popup">
                         <h4>Stephan Janssen</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Founder of BeJUG, JavaPolis, Devoxx, Parleys.com</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/stephanjanssen" class="btn_linkedin">LinkedIn</a>
                             <a href="http://twitter.com/stephan007" class="btn_twitter">Twitter</a>
                             <a href="mailto:sja@devoxx.com" class="btn_mail">Mail me</a>
@@ -137,13 +135,13 @@
                     <div class="popup">
                         <h4>Tim Peeters</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Technical Architect at Xplore addicted to Java with a focus on JBoss.</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
+                            <a href="https://www.facebook.com/tim.peeters" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/timpeeters" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
+                            <a href="https://twitter.com/peeterstim" class="btn_twitter">Twitter</a>
+                            <a href="mailto:tim.peeters@devoxx.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -273,13 +271,12 @@
                     <div class="popup">
                         <h4>Daniel Deluca</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Architect and Java SE/EE enthusiast, Devoxx, BeJUG and Devoxx4Kids Steering Member</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/danieldeluca" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/danieldeluca‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
+                            <a href="mailto:daniel.deluca@devoxx.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -324,13 +321,12 @@
                     <div class="popup">
                         <h4>Tasha Carl</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Java/Web Coder & Architect, Brussels JUG, RHoK Belgium, NAO Robot</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/tcabe" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/Imifos" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
+                            <a href="mailto:tasha.cts@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -454,7 +450,7 @@
                     </div>
                 </li>
                 <li class="Program">
-                    <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
+                    <div class="icon" style="background: url('../../images/team/StevenNoels.jpg') no-repeat center;"></div>
                     <h4>Steven Noels</h4>
 
                     <div class="popup">
