Made the venue page more responsive, correctly pinpoint the entrance

--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -19,8 +19,9 @@
     </div>
 </div>
 
-<div id="googlemap">
-    <iframe width="1450" height="530" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.be/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=51.245873,4.416846&amp;aq=&amp;sll=51.121196,3.240967&amp;sspn=0.506412,0.727158&amp;t=m&amp;ie=UTF8&amp;ll=51.245866,4.418049&amp;spn=0.007119,0.031092&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe>
+<!-- Responsive iFrame -->
+<div class="Flexible-container">
+    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.be/maps?f=d&amp;source=s_d&amp;saddr=Antwerpen+Metropolis+%4051.246072,4.418223&amp;daddr=&amp;hl=en&amp;geocode=&amp;sll=51.246108,4.417394&amp;sspn=0.003234,0.004501&amp;mra=prev&amp;ie=UTF8&amp;ll=51.246072,4.418223&amp;spn=0.006295,0.010057&amp;t=m&amp;output=embed"></iframe><br /><small><a href="https://maps.google.be/maps?f=d&amp;source=embed&amp;saddr=Antwerpen+Metropolis+%4051.246072,4.418223&amp;daddr=&amp;hl=en&amp;geocode=&amp;sll=51.246108,4.417394&amp;sspn=0.003234,0.004501&amp;mra=prev&amp;ie=UTF8&amp;ll=51.246072,4.418223&amp;spn=0.006295,0.010057&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 </div>
 
 <div id="adresse" class="area blue">
@@ -35,15 +36,13 @@
             <div class="col5 push1">
 
                 <h4>Place to be</h4>
-                <p>Metropolis Antwerp<br>Groenendaallaan 394<br>2030 Antwerp<br>Belgium</p>
-                <p>T: +32 3 544 36 00<br>F: +32 3 544 36 06</p>
+                <p>Metropolis Business Center<br>Kotterstraat<br>2030 Antwerp<br>Belgium</p>
+                <p>Entrance is on the right side of the building at the 'Metropolis Business Center'</p>
 
             </div>
-            <!--<div class="col5">-->
-                <!---->
-                <!--pdf-->
-                <!---->
-            <!--</div>			-->
+            <div class="col5">
+                <img src="../images/metropolis.png" width="400">   
+            </div>
             <!--<div class="col5">-->
                 <!---->
                 <!--visual-->
