--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -262,6 +262,26 @@ div.selector.ng-invalid {
     font-size: 18px;
 }
 
+/* Flexible iFrame for Google Maps */
+
+.Flexible-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.Flexible-container iframe,   
+.Flexible-container object,  
+.Flexible-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* Bootstrap Style Alerts */
 
 .alert {
