--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="Steering Program">
+                <li class="Steering Program CFP">
                     <div class="icon" style="background: url('../../images/team/StephanJanssen.jpg') no-repeat center;"></div>
                     <h4>Stephan Janssen</h4>
 
@@ -416,7 +416,7 @@
                     </div>
                 </li>
                 <li class="CFP">
-                    <div class="icon" style="background: url('../../images/team/CyrilLakech.jpg') no-repeat center;"></div>
+                    <div class="icon" style="background: url('../../images/team/NoImage.jpg') no-repeat center;"></div>
                     <h4>Cyril Lakech</h4>
 
                     <div class="popup">
@@ -467,7 +467,7 @@
                     </div>
                 </li>
                 <li class="Program">
-                    <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
+                    <div class="icon" style="background: url('../../images/team/NoImage.jpg') no-repeat center;"></div>
                     <h4>Geert Van Landeghem</h4>
 
                     <div class="popup">
