--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -68,8 +68,7 @@
                     <div class="popup">
                         <h4>Jo Voordeckers</h4>
 
-                        <p><img src="../images/tracks/icon_web.png" width="30" style="float:left"><img src="../images/tracks/icon_mobile.png" width="30" style="float:left">
-                            Enjoys a good challenge, learning and teaching new technologies, loves building UIs and make apps scale. </p>
+                        <p>Enjoys a good challenge, learning and teaching new technologies, loves building UIs and make apps scale. </p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/in/jovoordeckers" class="btn_linkedin">LinkedIn</a>
@@ -88,10 +87,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://nl.linkedin.com/in/jankeesvanandel" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/jankeesvanandel" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -105,10 +102,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/gertleenders" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/glnds" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -155,10 +150,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/ljacomet" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/ljacomet" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -172,10 +165,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/pub/kristien-leyn/12/556/b4" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/Krisje10" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -189,10 +180,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/johanvos" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/johanvos‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -206,10 +195,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/alexvanboxel‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/alexvb‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -223,10 +210,7 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/pub/sam-buls/19/118/a45" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -240,10 +224,7 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/stieno" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -257,10 +238,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/pub/luc-duponcheel/1/366/6b7‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/LucDup‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -293,7 +272,6 @@
                             <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/pub/david-delabassee/13/48b/999" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/delabassee" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -310,7 +288,6 @@
                             <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://uk.linkedin.com/in/dhardiker‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/dhardiker‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -340,10 +317,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://www.linkedin.com/in/steveonjava‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/steveonjava" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -357,10 +332,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/peterkuterna" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/peterkuterna" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -374,10 +347,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://fr.linkedin.com/pub/alexis-moussine-pouchkine/8/51a/4b2" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/alexismp" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -390,12 +361,6 @@
 
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
-                        <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
-                        </div>
                     </div>
                 </li>
                 <li class="Program Mobile CFP">
@@ -408,10 +373,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://www.linkedin.com/pub/dir/Mike/Seghers" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/mikeseghers‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -425,10 +388,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://fr.linkedin.com/in/cyrillakech" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/cyril_lakech‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -442,10 +403,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://nl.linkedin.com/in/royvanrijn" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/royvanrijn‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -459,10 +418,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/stevenn‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/stevenn‎" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
@@ -476,10 +433,8 @@
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/geertvanlandeghem‎" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/gvanlandeghem" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
