Removed hotels for now

--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -41,13 +41,8 @@
 
             </div>
             <div class="col5">
-                <img src="../images/metropolis.png" width="400">   
+                <img src="../images/metropolis.png" width="400">
             </div>
-            <!--<div class="col5">-->
-                <!---->
-                <!--visual-->
-                                        <!---->
-            <!--</div>					-->
         </div>
 
     </div>
@@ -65,19 +60,9 @@
             </div>
             <div class="col5 push1">
 
-                <h4>Hotels</h4>
+                <h4>Devoxx Hotels</h4>
 
-                <ul class="linkList">
-                    <li><a href="http://www.hoteldocklands.be/home">Dockland hotel</a> (1km)</li>
-                    <li><a href="http://www.accorhotels.com/gb/hotel-0465-novotel-antwerpen/index.shtml">Novotel North</a> (3km)</li>
-                    <li><a href="http://www.leopoldhotelantwerp.com/">Leopold Hotel</a> (4km)</li>
-                    <li><a href="http://www.hotel-century-antwerpen.com/index.asp">Century Hotel</a> (4km)</li>
-                    <li><a href="http://www.accorhotels.com/gb/hotel-8094-hotel-mercure-antwerpen-centrum-opera/index.shtml">Mercure Centrum Opera</a> (4km)</li>
-                    <li><a href="http://ibishotel.ibis.com/gb/hotel-1453-ibis-antwerpen-centrum/index.shtml">Ibis Hotel</a> (4km)</li>
-                    <li><a href="http://www.hyllithotel.be/hyllit_hotel_antwerpen-ligging.asp?taal=en">Hyllit Hotel</a> (4km)</li>
-                    <li><a href="http://www.radissonblu.com/astridhotel-antwerp">Radisson Blu Astrid Hotel</a> (5km)</li>
-                    <li><a href="http://www.tulipinnantwerpen.com/default.aspx">Tulip Inn</a> (4km)</li>
-                </ul>
+                To be announced
 
             </div>
             <div class="col4">
