Gert bio update

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -99,11 +99,13 @@
                     <div class="popup">
                         <h4>Gert Leenders</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Gert is the product manager of Parleys and co-hosts the Devoxx Future track</p>
 
                         <div class="links clearfix">
+                            <a href="https://www.facebook.com/gert.leenders" class="btn_facebook">Facebook</a>
                             <a href="http://be.linkedin.com/in/gertleenders" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/glnds" class="btn_twitter">Twitter</a>
+                            <a href="mailto:leenders.gert@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
