--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -41,7 +41,7 @@
 
             </div>
             <div class="col5">
-                <img src="../images/metropolis.png" width="400">
+                <img src="../../images/metropolis.png" width="400">
             </div>
         </div>
 
