--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -367,16 +367,17 @@
                 </li>
                 <li class="Program Mobile CFP">
                     <div class="icon" style="background: url('../../images/team/MikeSeghers.jpg') no-repeat center;"></div>
-                    <h4>Miker Seghers</h4>
+                    <h4>Mike Seghers</h4>
 
                     <div class="popup">
                         <h4>Mike Seghers</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Passionate Java/iOS developer, keen on software architecture in general.</p>
 
                         <div class="links clearfix">
                             <a href="http://www.linkedin.com/pub/dir/Mike/Seghers" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/mikeseghers‎" class="btn_twitter">Twitter</a>
+                            <a href="mailto:mike.seghers@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
