- Image fix - Name change

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -37,7 +37,7 @@
                     <li><a href="http://www.twitter.com/cyril_lakech">Cyril Lakech</a> (@cyril_lakech)</li>
                     <li><a href="http://www.twitter.com/jankeesvanandel">Jan-Kees van Andel</a> (@jankeesvanandel)</li>
                     <li><a href="http://www.twitter.com/jovoordeckers">Jo Voordeckers</a> (@jovoordeckers)</li>
-                    <li><a href="http://www.twitter.com/mikeseghers">Michael Seghers</a> (@mikeseghers)</li>
+                    <li><a href="http://www.twitter.com/mikeseghers">Mike Seghers</a> (@mikeseghers)</li>
                     <li><a href="http://www.twitter.com/stephan007">Stephan Janssen</a> (@stephan007)</li>
                 </ul>
 
