Pause tweets, hide google as sponsor and mobile apps

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -23,7 +23,7 @@
                         <h1>Call for Presentations</h1>
                         <h3>Speak @Devoxx</h3>
                         <p>We're looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>
-                        <a href="#/speaker/proposal/new" class="btn">Submit a talk</a>
+                        <a href="#/tracks" scroll="tracks" class="btn">Check our tracks</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
@@ -334,7 +334,7 @@
             <div class="col10">
                 <h2>What’s up? <span>#DEVOXX</span></h2>
             </div>
-            <div class="col10 apps">
+            <div class="col10 apps hidden">
                 <h4>Schedule and interact!</h4>
                 <a href="#" class="btn googleStore"></a>
                 <a href="#" class="btn appStore"></a>
