Added image + bio Cyril

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -26,7 +26,7 @@
                         <a href="#" data-filter="*">All</a>
                     </li>
                     <li>
-                        <a href="#" data-filter=".Steering">Steering</a>
+                        <a href="#" data-filter=".Admin">Admin</a>
                     </li>
                     <li>
                         <a href="#" data-filter=".Program">Program</a>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="Steering Program CFP">
+                <li class="Admin Program CFP">
                     <div class="icon" style="background: url('../../images/team/StephanJanssen.jpg') no-repeat center;"></div>
                     <h4>Stephan Janssen</h4>
 
@@ -157,14 +157,14 @@
                         </div>
                     </div>
                 </li>
-                <li class="Steering">
+                <li class="Admin">
                     <div class="icon" style="background: url('../../images/team/KristienLeyn.jpg') no-repeat center;"></div>
                     <h4>Kristien Leyn</h4>
 
                     <div class="popup">
                         <h4>Kristien Leyn</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>The Conference Admin Queen :)</p>
 
                         <div class="links clearfix">
                             <a href="http://be.linkedin.com/pub/kristien-leyn/12/556/b4" class="btn_linkedin">LinkedIn</a>
@@ -382,17 +382,18 @@
                     </div>
                 </li>
                 <li class="CFP">
-                    <div class="icon" style="background: url('../../images/team/NoImage.jpg') no-repeat center;"></div>
+                    <div class="icon" style="background: url('../../images/team/CyrilLakech.jpg') no-repeat center;"></div>
                     <h4>Cyril Lakech</h4>
 
                     <div class="popup">
                         <h4>Cyril Lakech</h4>
 
-                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+                        <p>Founder of @chtiug, web developer @ groupe-adeo.com</p>
 
                         <div class="links clearfix">
                             <a href="http://fr.linkedin.com/in/cyrillakech" class="btn_linkedin">LinkedIn</a>
                             <a href="https://twitter.com/cyril_lakech‎" class="btn_twitter">Twitter</a>
+                            <a href="mailto:cyril.lakech@gmail.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
