--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -388,7 +388,7 @@
                     <div class="popup">
                         <h4>Cyril Lakech</h4>
 
-                        <p>Founder of @chtiug, web developer @ groupe-adeo.com</p>
+                        <p>Founder of @chtijug, web developer @ <a href="http://www.groupe-adeo.com">groupe-adeo.com</a></p>
 
                         <div class="links clearfix">
                             <a href="http://fr.linkedin.com/in/cyrillakech" class="btn_linkedin">LinkedIn</a>
