--- a/app/views/lost_password.html
+++ b/app/views/lost_password.html
@@ -12,22 +12,10 @@
 <div id="paper_form" class="area lightgrey">
     <div class="grid">
 
-        <h4 ng-show="isSubmitting"
-            devoxx-set-focus-on="isSubmitting"
-            devoxx-set-focus-field="submittingMessage">
-            <!-- an anchor is required for setting focus. Focus is used to scroll to the message -->
-            <a href="" id="submittingMessage">Sending...</a>
-        </h4>
-
-        <h4 ng-show="isSubmitted">
-            An email with instructions on how to reset your password has been sent to the provided email address.<br>
-            <a ng-click="initLostPasswordForm()">Back to form</a>
-        </h4>
-
-        <form ng-submit="lostPassword()" ng-hide="isSubmitting || isSubmitted" name="lostPasswordForm">
+        <form ng-submit="lostPassword()" ng-hide="feedback.type == 'info'" name="lostPasswordForm">
             <div class="row">
                 <div class="col12">
-                    <h4>{{error}}</h4>
+
                     <h4>Reset your lost password here</h4>
                     <ul>
                         <li>
@@ -39,14 +27,22 @@
             </div>
 
             <div class="row">
-                <div class="col6 push6">
+                <div class="col9 push3">
                     <ul>
                         <li class="btn">
-                            <input type="submit" name="" value="Reset">
+                            <input type="submit" name="" value="Reset password">
                         </li>
                     </ul>
                 </div>
             </div>
+                       
         </form>
+
+        <div class="row">
+            <div class="col9 push3">
+                <div class="alert alert-{{feedback.type}}" ng-show="feedback">{{feedback.message}}</div>
+            </div>
+        </div>
+
     </div>
 </div>
